Fix checkbox alignment

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -74,6 +74,7 @@
 
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
   }
 
   &__checkbox-label {
